# merginguriel

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CMD_ARGUMENT_CONVENTIONS.md  CROSS_LINGUAL_ANALYSIS_REPORT.md  EXPERIMENT_README.md  FUTURE_DEVELOPMENT.md  GEMINI.md  ITERATIVE_TRAINING_README.md  PRIORI_CATEGORIZATION.md  README.md  RESEARCH_SUMMARY.md  TASKS.md  URIEL_ENSEMBLE_IMPLEMENTATION_REPORT.md  aggregate_results.py  analyze_massive.py  check_haryoaw_patterns.py  comprehensive_analysis.py  enhanced_analysis.py  evaluate_massive.py  evaluate_specific_model.py  experiment_commands.txt  experiment_commands_base.txt  experiments_methods.db  experiments_num_lang.db  experiments_overnight.db  extract_best_baseline.py  extract_true_best_baseline_fixed.py  filter_k_models.py  finetune_xlmr_massive.py  investigate_labels.py  main.py  plot_results.py  pyproject.toml  quick_experiment.ipynb  results_report_20250911_074014.md  results_report_20250911_100141.md  results_report_20250911_110343.md  results_report_20250917_064315.md  (+14 more)
.claude/: .nfs00000000019000ea00000434
analysis/: merging_effect_analysis.py  merging_effect_predictor.py  merging_effect_predictor_v2.py  regional_coherence_analysis.py
configs/: test_config.yaml
examples/: iterative_training_example.py
merginguriel/: __init__.py  adaptive_merging.py  aggregate_results.py  analysis_helpers.py  comparison_runner.py  compatibility.py  compute_compatibility_matrix.py  ensemble_runner.py  evaluate_base_encoder.py  evaluate_existing_merges.py  evaluate_specific_model.py  extract_similarity.py  extract_top_k.py  fetch_bert_models.py  generate_sparse_similarity_unified.py  iterative_config.py  iterative_training_orchestrator.py  merge_coordinator.py  model_definition.py  naming_config.py  plot_results.py  preprocessing.py  run_iterative_training.py  run_large_scale_ensemble_experiments.py  run_large_scale_experiment.py  run_large_scale_iterative_training.py  run_merging_pipeline_refactored.py  run_multilang_training.py  run_nxn_evaluation.py  similarity.py  similarity_utils.py  test_logger_global.py  train_missing_models.py  training_bert.py  training_bert_haryo.py  training_state.py  uriel_ensemble_inference.py  utils.py
notebooks/: analysis_massive.ipynb  analysis_result.ipynb  beginning_stuff.py  checking_model.ipynb  merge_method_microscope.ipynb  test_lang2vec.ipynb
references/: experiment-log.md  troubleshooting.md
resources/: CONCERN.md  ENSEMBLE_VOTING_METHODS.md  ITERATIVE_TRAINING_README.md
submodules/: auto_merge_llm  lang2vec  lm-evaluation-harness
test_data/: COMPATIBILITY_TEST.md  TESTING_GUIDE.md  generate_test_data.py
testing_chamber/: compare_results.ipynb  compare_results.py  showcase_merging_methods.py  test_similarity_scores.py
tests/: README.md  __init__.py  (+15 more)
(+65 files in other folders)
