[project]
name = "merginguriel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.34.4",
    "loguru>=0.7.3",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "urielplus>=1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "merginguriel",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.setuptools]
packages = ["merginguriel"]

[tool.uv.sources]
merginguriel = { workspace = true }
