[project]
name = "merginguriel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "datasets==3.6.0",
    "huggingface-hub>=0.34.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "plotly>=6.3.1",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tf-keras>=2.19.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "urielplus>=1.1",
    "wandb>=0.19.8",
    "lang2vec",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "merginguriel",
    "pytest>=8.4.1",
    "anyio>=4.4.0",
]

[tool.uv.workspace]
members = [
    ".",
    "./submodules/auto_merge_llm",
]

[tool.setuptools]
packages = ["merginguriel"]

[tool.uv.sources]
merginguriel = { workspace = true }
lang2vec = { path = "./submodules/lang2vec", editable = true }
auto_merge_llm = { workspace = true }
